--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -5,6 +5,19 @@ on:
     - master
 
 jobs:
+  build:
+    runs-on: ubuntu-latest
+    
+    strategy:
+      matrix:
+        node-version: [15.x]
+        
+     steps:
+       -uses: actions/checkout@v1
+       -run: npm install
+       -run: npm run build
+       -run: npm test
+       
   deploy:
     runs-on: ubuntu-latest
     steps:
